# gramps-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-code-quality-cleanup.md  2026-07-18-bugfixes-and-pagination.md  2026-07-18-ci-badges-readme.md  2026-07-18-configurable-host-port.md  2026-07-18-extended-api-tools.md  2026-07-22-python-312-bump.md
docs/superpowers/specs/: 2026-07-17-code-quality-cleanup-design.md  2026-07-18-bugfixes-and-pagination-design.md  2026-07-18-ci-badges-readme-design.md  2026-07-18-configurable-host-port-design.md  2026-07-18-extended-api-tools-design.md  2026-07-22-python-312-bump-design.md
src/gramps_mcp/: __init__.py  auth.py  client.py  config.py  merge.py  server.py  utils.py
src/gramps_mcp/handlers/: event_handler.py  facts_handler.py  family_detail_handler.py  living_handler.py  person_detail_handler.py  relationship_handler.py  tag_handler.py  timeline_handler.py
src/gramps_mcp/models/: api_calls.py  api_mapping.py
src/gramps_mcp/models/parameters/: base_params.py  citation_params.py  event_params.py  facts_params.py  family_params.py  living_params.py  media_params.py  note_params.py  people_params.py  place_params.py  relations_params.py  reports_params.py  (+7 more)
src/gramps_mcp/tools/: analysis.py  data_management.py  records_tools.py  relationship_tools.py  search_basic.py  search_details.py
tests/: __init__.py  test_analysis.py  test_auth_integration.py  test_client.py  test_client_merge.py  test_complete_workflow.py  test_config.py  test_data_management.py  test_merge.py  test_parameter_alignment.py  test_records_tools.py  test_relationship_tools.py  test_search_basic.py  test_search_details.py  test_server.py  test_unified_api.py  test_utils.py
